--- a/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
@@ -27,12 +27,36 @@
 	display: flex;
 }
 
-@media all and (max-width: 375px) {
+@media all and (max-width: 992px) {
 	.Body {
-		margin: 10px 20px 27px 20px;
+		width: 100%;
+		margin: 0px 0px 0px 0px;
 	}
 	.BodyBloc {
-		height: 150px;
+		height: 100%;
+		flex-direction: column;
+	}
+	.BodyBloc__details {
+		width: 100%;
+	}
+	.RateHostBloc {
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: row-reverse;
+		align-items: center;
+		justify-content: space-between;
+		margin-top: 25px;
+	}
+}
+
+@media all and (max-width: 375px) {
+	.Body {
+		width: 100%;
+		margin: 0px;
+	}
+	.BodyBloc {
+		height: 170px;
 		flex-direction: column;
 		flex-wrap: wrap;
 	}
