--- a/kasa-app/src/assets/styles/pagesStyles/index.css
+++ b/kasa-app/src/assets/styles/pagesStyles/index.css
@@ -4,9 +4,15 @@
 	text-decoration: none;
 }
 
+@media all and (max-width: 992px) {
+	#root {
+		width: 100%;
+	}
+}
+
 @media all and (max-width: 375px) {
 	#root {
-		width: 375px;
+		width: 335px;
 		height: 812px;
 	}
 }
