--- a/kasa-app/src/assets/styles/componentsStyles/Carrousel.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Carrousel.css
@@ -1,10 +1,10 @@
 .Carrousel {
 	height: 415px;
 	margin-bottom: 30px;
+	margin: 0px 100px;
 }
 
 .Carrousel__status {
-	font-family: "Montserrat";
 	font-size: 18px;
 	color: #fff;
 	font-weight: 500;
@@ -23,8 +23,8 @@
 
 .Carrousel--image {
 	border-radius: 25px;
-	width: 100%;
 	height: 100%;
+	width: 100%;
 	object-fit: cover;
 	z-index: -1;
 }
@@ -51,6 +51,12 @@
 	cursor: pointer;
 	background: none;
 	border: none;
+}
+
+@media all and (max-width: 992px) {
+	.Carrousel {
+		margin: 0px 20px;
+	}
 }
 
 @media all and (max-width: 375px) {
