--- a/kasa-app/src/assets/styles/componentsStyles/Dropdown.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Dropdown.css
@@ -1,7 +1,6 @@
 /* BLOC DE  STYLE GENERAL (Desktop) */
 
 .dropdown {
-	font-family: "Montserrat";
 	font-weight: 500;
 }
 
@@ -59,6 +58,7 @@
 /* BLOC DE STYLE POUR LA PAGE FICHE LOGEMENT (Desktop) */
 
 .dropdownBloc {
+	margin: 0px 100px;
 	display: flex;
 	justify-content: space-between;
 }
@@ -68,7 +68,6 @@
 }
 
 .dropdownBloc .accordeon__item__title {
-	width: 582px;
 	height: 52px;
 	border-radius: 10px;
 }
@@ -101,7 +100,6 @@
 /* BLOC DE STYLE POUR LA PAGE ABOUT (Desktop) */
 
 .AboutBloc .dropdown {
-	width: 82.5%;
 	margin: auto;
 	margin-bottom: 31px;
 }
@@ -134,25 +132,46 @@
 	padding: 36px 27px 19px 18px;
 }
 
+/* RESPONSIVE TABLET */
+
 @media all and (max-width: 992px) {
-	.AboutBloc .dropdown {
-		width: 100%;
-	}
 	.dropdownBloc {
-		flex-direction: column;
+		margin: 0px 20px;
 	}
+
 	.dropdownBloc .dropdown {
-		width: 100%;
 		margin-bottom: 25px;
+		width: 45%;
 	}
-	.dropdownBloc .accordeon__item__title {
-		width: 100%;
+	.AboutBloc .accordeon--content-show {
+		font-size: 18px;
+		max-height: 200px;
+	}
+	.AboutBloc .accordeon__item__title--text {
+		font-size: 15px;
+	}
+	.dropdownBloc .accordeon__item__title--text {
+		font-size: 15px;
+	}
+
+	.AboutBloc .accordeon--content {
+		font-size: 14px;
+	}
+	.dropdownBloc .accordeon--content {
+		font-size: 14px;
+	}
+
+	.AboutBloc .accordeon--content-show {
+		font-size: 14px;
+	}
+	.dropdownBloc .accordeon--content-show {
+		font-size: 14px;
 	}
 }
 
-@media all and (max-width: 375px) {
-	/* RESPONSIVE Page Fiche Logement */
+/* RESPONSIVE MOBILE */
 
+@media all and (max-width: 375px) {
 	.dropdownBloc {
 		flex-direction: column;
 	}
@@ -163,7 +182,6 @@
 	}
 
 	.dropdownBloc .accordeon__item__title {
-		width: 100%;
 		height: 29.93px;
 		border-radius: 5px;
 	}
@@ -194,10 +212,7 @@
 		margin-right: 5.77px;
 	}
 
-	/* RESPONSIVE Page About */
-
 	.AboutBloc .dropdown {
-		width: 100%;
 		margin: auto;
 		margin-bottom: 31px;
 		z-index: 9999;
