--- a/kasa-app/src/assets/styles/componentsStyles/Section1.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Section1.css
@@ -1,44 +1,42 @@
 .resultSection {
 	height: 223px;
-	margin-bottom: 43px;
 	border-radius: 25px;
 }
 
 .resultSection__title {
-	font-family: "Montserrat";
 	font-size: 48px;
 	color: #fff;
 	font-weight: 500;
 	margin: 0;
 	text-align: center;
-	width: 100%;
 	height: 68px;
-	position: relative;
-	top: 78px;
 	z-index: 1;
+	position: relative;
+	top: 68px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .resultSection__background {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 100%;
-	height: 223px;
+	height: 100%;
 	filter: brightness(70%);
 	border-radius: 25px;
 	position: relative;
-	bottom: 78px;
+	bottom: 68px;
 }
 
 @media all and (max-width: 992px) {
 	.resultSection__title {
-		font-size: 30px;
+		font-size: 35px;
 	}
 }
 
 @media all and (max-width: 375px) {
 	.resultSection {
-		width: 100%;
 		margin-bottom: 0px;
 		border-radius: 10px;
 	}
@@ -49,8 +47,5 @@
 		text-align: left;
 		margin-left: 16px;
 		top: 8px;
-	}
-	.resultSection__background {
-		width: 100%;
 	}
 }
