--- a/kasa-app/src/assets/styles/componentsStyles/Thumb.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Thumb.css
@@ -21,7 +21,6 @@
 }
 
 .ThumbBloc__title {
-	font-family: "Montserrat";
 	font-size: 18px;
 	color: #fff;
 	font-weight: 500;
@@ -37,16 +36,16 @@
 	.ThumbBloc__link {
 		width: 450px;
 		height: 340px;
-		margin: 15px;
+		margin: 5px;
 	}
 }
 
 @media all and (max-width: 375px) {
 	.ThumbBloc {
-		width: 335px;
+		width: 100%;
 	}
 	.ThumbBloc__link {
-		width: 335px;
+		width: 100%;
 		height: 255px;
 		margin: 0px 0px 20px 0px;
 	}
