--- a/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
@@ -1,8 +1,7 @@
-.Body {
-	margin: 0px 100px;
-}
 .BodyBloc {
 	height: 121px;
+	width: 100;
+	margin: 30px 100px 0px 100px;
 	display: flex;
 	justify-content: space-between;
 	margin-bottom: 25px;
@@ -12,10 +11,8 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	width: 75%;
 }
 .RateHostBloc {
-	width: 196px;
 	height: 121px;
 	display: flex;
 	flex-direction: column;
@@ -30,34 +27,31 @@
 @media all and (max-width: 992px) {
 	.Body {
 		width: 100%;
-		margin: 0px 0px 0px 0px;
 	}
 	.BodyBloc {
-		height: 100%;
+		height: 250px;
+		margin: 20px;
 		flex-direction: column;
-	}
-	.BodyBloc__details {
-		width: 100%;
-	}
-	.RateHostBloc {
-		width: 100%;
-		height: 100%;
-		display: flex;
-		flex-direction: row-reverse;
 		align-items: center;
-		justify-content: space-between;
-		margin-top: 25px;
+		flex-wrap: wrap;
+	}
+
+	.RateHostBloc {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: flex-start;
 	}
 }
 
 @media all and (max-width: 375px) {
 	.Body {
-		width: 100%;
 		margin: 0px;
 	}
 	.BodyBloc {
-		height: 170px;
+		height: 150px;
 		flex-direction: column;
+		align-items: flex-start;
 		flex-wrap: wrap;
 	}
 	.BodyBloc__details {
@@ -73,8 +67,6 @@
 		justify-content: space-between;
 	}
 	.TagsBloc {
-		min-width: 335px;
-		max-width: 375px;
 		justify-content: space-between;
 	}
 }
