--- a/kasa-app/src/assets/styles/pagesStyles/index.css
+++ b/kasa-app/src/assets/styles/pagesStyles/index.css
@@ -1,6 +1,14 @@
+body {
+	margin: 0px;
+	font-family: "Montserrat";
+}
+
 #root {
-	width: 1440px;
-	margin: auto;
+	width: 100%;
+	height: 1024px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	text-decoration: none;
 }
 
@@ -12,7 +20,7 @@
 
 @media all and (max-width: 375px) {
 	#root {
-		width: 335px;
+		width: 100%;
 		height: 812px;
 	}
 }
