--- a/kasa-app/src/assets/styles/componentsStyles/Title.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Title.css
@@ -1,9 +1,12 @@
 .Title {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	height: 77px;
 }
 
 .Title--name {
-	height: 51px;
+	height: 67%;
 	font-size: 36px;
 	color: #ff6060;
 	font-weight: 500;
@@ -13,7 +16,7 @@
 }
 
 .Title--location {
-	height: 26px;
+	height: 33%;
 	font-size: 18px;
 	color: #ff6060;
 	font-weight: 500;
