--- a/kasa-app/src/assets/styles/componentsStyles/Gallery.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Gallery.css
@@ -1,8 +1,9 @@
 .Gallery {
+	height: 2860px;
 	border-radius: 25px;
 	background-color: rgba(246, 246, 246, 1);
-	margin-top: 33px;
-	padding: 31px 20px;
+	margin-top: 43px;
+	padding: 2%;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
