--- a/kasa-app/src/assets/styles/componentsStyles/Thumb.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Thumb.css
@@ -1,23 +1,15 @@
 .ThumbBloc__link {
 	text-decoration: none;
-	width: 340px;
-	height: 340px;
-	margin: 25px 30px;
+	width: 28.6%;
+	height: 11.9%;
+	margin: 2%;
 }
 
 .ThumbBloc {
 	width: 100%;
 	height: 100%;
 	border-radius: 10px;
-}
-
-.ThumbBloc__image {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	border-radius: 10px;
-	display: flex;
-	align-items: flex-end;
+	background-size: cover;
 }
 
 .ThumbBloc__title {
@@ -25,18 +17,16 @@
 	color: #fff;
 	font-weight: 500;
 	color: #ffff;
-	height: 52px;
-	margin: 0px 20px 20px 20px;
-	position: relative;
-	bottom: 71px;
+	height: 90%;
 	display: flex;
-	align-content: stretch;
+	align-items: flex-end;
+	margin-left: 20px;
 }
 @media all and (max-width: 992px) {
 	.ThumbBloc__link {
 		width: 450px;
-		height: 340px;
-		margin: 5px;
+		height: 255px;
+		margin: 7px;
 	}
 }
 
