--- a/kasa-app/src/assets/styles/componentsStyles/Title.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Title.css
@@ -1,10 +1,3 @@
-.Title {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 77px;
-}
-
 .Title--name {
 	height: 67%;
 	font-size: 36px;
@@ -27,14 +20,16 @@
 
 @media all and (max-width: 992px) {
 	.Title--name {
-		font-size: 26px;
+		font-size: 24px;
+		display: flex;
+		align-items: flex-start;
+	}
+	.Title--location {
+		font-size: 16px;
 	}
 }
 
 @media all and (max-width: 375px) {
-	.Title {
-		height: 73px;
-	}
 	.Title--name {
 		font-size: 18px;
 		height: 46px;
@@ -44,5 +39,6 @@
 		font-size: 14px;
 		height: 22px;
 		align-items: flex-end;
+		margin-bottom: 10px;
 	}
 }
