--- a/kasa-app/src/assets/styles/componentsStyles/Thumb.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Thumb.css
@@ -1,8 +1,9 @@
 .ThumbBloc__link {
 	text-decoration: none;
-	width: 28.6%;
-	height: 11.9%;
-	margin: 2%;
+	width: 340px;
+	height: 340px;
+	margin: 25px;
+	border-radius: 10px;
 }
 
 .ThumbBloc {
