--- a/kasa-app/src/assets/styles/componentsStyles/Gallery.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Gallery.css
@@ -1,6 +1,6 @@
 .Gallery {
 	border-radius: 25px;
-	background-color: rgba(246, 246, 246, 1);
+	background-color: #f6f6f6;
 	margin-top: 43px;
 	padding: 25px 0px;
 	display: flex;
