--- a/kasa-app/src/assets/styles/componentsStyles/Tags.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Tags.css
@@ -3,13 +3,15 @@
 	color: #fff;
 	white-space: nowrap;
 	background-color: #ff6060;
-	width: 115px;
+	min-width: 107px;
+	width: fit-content;
 	height: 25px;
 	border-radius: 10px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	margin-right: 10px;
+	padding: 0px 4px;
 }
 
 @media all and (max-width: 992px) {
