--- a/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
@@ -1,4 +1,9 @@
-.BodyBloc {
+.Body {
+	height: 882px;
+	margin-bottom: 14px;
+}
+
+.DetailsBlocContainer {
 	height: 121px;
 	margin: 30px 100px 0px 100px;
 	display: flex;
@@ -6,12 +11,12 @@
 	margin-bottom: 25px;
 }
 
-.BodyBloc__details {
+.DetailsBlocContainer__Title {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
-.RateHostBloc {
+.DetailsBlocContainer__RateHost {
 	height: 121px;
 	display: flex;
 	flex-direction: column;
@@ -19,30 +24,33 @@
 	align-items: flex-end;
 }
 
-.TagsBloc {
+.DetailsBlocContainer__Tags {
 	display: flex;
 }
 
 @media all and (max-width: 992px) {
-	.BodyBloc {
+	.Body {
+		height: max-content;
+	}
+	.DetailsBlocContainer {
 		height: fit-content;
 		margin: 30px 20px;
 		flex-wrap: wrap;
 	}
-	.BodyBloc__details {
+	.DetailsBlocContainer__Title {
 		height: 121px;
 		width: 100%;
 		justify-content: center;
 		align-items: center;
 	}
-	.RateHostBloc {
+	.DetailsBlocContainer__RateHost {
 		width: 100%;
 		display: flex;
 		flex-direction: row-reverse;
 		justify-content: center;
 		align-items: center;
 	}
-	.TagsBloc {
+	.DetailsBlocContainer__Tags {
 		flex-wrap: wrap;
 		justify-content: center;
 	}
@@ -52,23 +60,23 @@
 	.Body {
 		margin: 0px;
 	}
-	.BodyBloc {
+	.DetailsBlocContainer {
 		height: 150px;
 		margin: 15px 20px;
 		flex-direction: column;
 		align-items: flex-start;
 		flex-wrap: wrap;
 	}
-	.BodyBloc__details {
+	.DetailsBlocContainer__Title {
 		height: 101px;
 		justify-content: flex-start;
 		align-items: flex-start;
 	}
-	.RateHostBloc {
+	.DetailsBlocContainer__RateHost {
 		height: 33px;
 		justify-content: space-between;
 	}
-	.TagsBloc {
+	.DetailsBlocContainer__Tags {
 		justify-content: flex-start;
 	}
 }
