--- a/kasa-app/src/assets/styles/componentsStyles/Host.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Host.css
@@ -22,6 +22,7 @@
 
 @media all and (max-width: 375px) {
 	.Host--name {
+		width: min-content;
 		font-size: 12px;
 		display: flex;
 		align-items: center;
