--- a/kasa-app/src/assets/styles/componentsStyles/Thumb.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Thumb.css
@@ -10,15 +10,18 @@
 	height: 100%;
 	border-radius: 10px;
 	background-size: cover;
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-end;
 }
 
 .ThumbBloc__title {
 	font-size: 18px;
 	color: #fff;
-	height: 90%;
+	height: 52px;
 	display: flex;
-	align-items: flex-end;
-	margin-left: 20px;
+	align-items: flex-start;
+	margin: 0px 20px 20px 20px;
 }
 @media all and (max-width: 992px) {
 	.ThumbBloc__link {
