--- a/kasa-app/src/assets/styles/pagesStyles/404.css
+++ b/kasa-app/src/assets/styles/pagesStyles/404.css
@@ -1,11 +1,11 @@
-.__BlocError404 {
+.BlocError404 {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 
-.__BlocError404--Title {
+.BlocError404--Title {
 	font-size: 288px;
 	color: #ff6060;
 	font-weight: 700;
@@ -14,7 +14,7 @@
 	margin-bottom: 66px;
 }
 
-.__BlocError404--Details {
+.BlocError404--Details {
 	font-size: 36px;
 	color: #ff6060;
 	font-weight: 500;
@@ -24,7 +24,7 @@
 	margin-bottom: 182px;
 }
 
-.__BlocError404--returnLanding {
+.BlocError404--returnLanding {
 	font-size: 18px;
 	color: #ff6060;
 	font-weight: 500;
@@ -32,32 +32,32 @@
 }
 
 @media all and (max-width: 992px) {
-	.__BlocError404--Title {
+	.BlocError404--Title {
 		font-size: 144px;
 	}
-	.__BlocError404--Details {
+	.BlocError404--Details {
 		font-size: 18px;
 	}
-	.__BlocError404--returnLanding {
+	.BlocError404--returnLanding {
 		font-size: 10px;
 	}
 }
 
 @media all and (max-width: 375px) {
-	.__BlocError404--Title {
+	.BlocError404--Title {
 		height: 99px;
 		font-size: 96px;
 		margin-top: 178px;
 		margin-bottom: 11px;
 	}
 
-	.__BlocError404--Details {
+	.BlocError404--Details {
 		font-size: 18px;
 		height: 52px;
 		margin-bottom: 133px;
 	}
 
-	.__BlocError404--returnLanding {
+	.BlocError404--returnLanding {
 		font-size: 14px;
 		margin-bottom: 210px;
 	}
