--- a/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
@@ -1,6 +1,6 @@
 .Body {
 	height: 882px;
-	margin-bottom: 14px;
+	margin-bottom: 40px;
 }
 
 .DetailsBlocContainer {
@@ -69,7 +69,7 @@
 	}
 	.DetailsBlocContainer__Title {
 		height: 101px;
-		justify-content: flex-start;
+		justify-content: space-between;
 		align-items: flex-start;
 	}
 	.DetailsBlocContainer__RateHost {
